--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -317,3 +317,57 @@
     .delete:active {
         background-image: url(../Css/images/delete_select.png);
     }
+
+#shadow {
+    display: none;
+    height: 100%;
+    width: 100%;
+    background-color: #cccccc;
+    opacity: 0.8;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+#editImgWindow {
+    display: none;
+    border-radius: 4px;
+    width: 1136px;
+    height: 662px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    background: #fff;
+    margin-top: -331px;
+    margin-left: -568px;
+}
+
+#editImgHead {
+    width: 100%;
+    height: 65px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 14px;
+    cursor: default;
+}
+
+#editImgHead span {
+    font-size: 16px;
+    font-weight: 700;
+    position: absolute;
+    top: 20px;
+    left: 25px;
+}
+
+#editImgHead div {
+    height: 17px;
+    width: 17px;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    background-image: url(../Css/images/close.png);
+    cursor: pointer
+}
