--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -248,14 +248,14 @@
                     <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
                 </div>
                 <div id="divImgs1" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs1" style="padding-left: 0px;"></ul>
+                    <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
                 </div>
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required"></span>
                     <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
                 </div>
                 <div id="divImgs2" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs2" style="padding-left: 0px;"></ul>
+                    <ul id="ulImgs2" class="ulImgs" style="padding-left: 0px;"></ul>
                 </div>
             </div>
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
@@ -310,6 +310,9 @@
         <div id="editImgHead">
             <span>编辑图片</span>
             <div id="btnClose"></div>
+        </div>
+        <div id="canvasFrame">
+            <canvas id="canvas"></canvas>
         </div>
     </div>
 </body>
