--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -371,3 +371,21 @@
     background-image: url(../Css/images/close.png);
     cursor: pointer
 }
+
+#canvasFrame {
+    z-index: 1001;
+    position: absolute;
+    left: 70px;
+    top: 66px;
+    width: 995px;
+    height: 475px;
+    background-color: #E1E1E1;
+}
+
+#canvas {
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+}
