--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FBCG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FBCG.css
@@ -11,4 +11,100 @@
 
 .fbcg_left {
     padding: 20px 100px 20px 50px;
+    width: 450px;
+    float: left;
+    display: inline-block;
+}
+
+.fbcg_tip {
+    text-align: center;
+    font-size: 26px;
+    font-family: "华文细黑";
+    text-indent: 16px;
+    margin-top: 15px;
+    width: 450px;
+}
+
+.fbcg_tip_img {
+    margin-left: -12px;
+    width: 38px;
+    height: 38px;
+    background: url(images/ok.png);
+}
+
+.fbcg_info {
+    width: 450px;
+    color: #bbb;
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 25px;
+}
+
+.fbcg_info_navigation {
+    color: #5a7de9;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.fbcg_main {
+    width: 450px;
+    height: 50px;
+    margin-top: 20px;
+    text-align: left;
+}
+
+.fbcg_btn {
+    width: 102px;
+    height: 39px;
+    float: left;
+    margin-right: 10px;
+}
+
+.fbcg_right {
+    padding: 20px 100px 20px 80px;
+    width: 380px;
+    float: right;
+    display: inline-block;
+    margin-top: 50px;
+    margin-left: 10px;
+}
+
+.fbcg_share {
+    height: 104px;
+    width: 162px;
+    display: block;
+    background-image: url(images/share.png);
+}
+
+.fbcg_tg {
+    width: 380px;
+    color: #bbb;
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 25px;
+    text-align: left;
+}
+
+.fbcg_share_img {
+    width: 90px;
+    height: 90px;
+    top: 0;
+    left: 0;
+    background-image: url(images/QR.png);
+}
+
+.fbcg_sm {
+    text-align: left;
+    color: #333;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 700;
+}
+
+.fbcg_gz {
+    text-align: left;
+    color: #a6a6a6;
+    font-size: 12px;
+    line-height: 25px;
+    width: 220px;
 }
