--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -59,7 +59,7 @@
                 </div>
                 <div class="fbcg_right">
                     <div class="fbcg_share">
-                        <img id="fbcg_share_img" src="@Url.Action("CreateQrCode")"  class="fbcg_share_img" />
+                        <img id="fbcg_share_img"  class="fbcg_share_img" />
                     </div>
                     <div class="fbcg_sm">
                         扫码分享信息
