跳转用户管理页面

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -49,10 +49,10 @@
                     <div class="fbcg_info">该信息已发布在 <a class="fbcg_info_navigation">福州 - 房产信息 - 租房</a>您的信息需要审核才能展示，请在个人中心关注信息状态。
                     </div>
                     <div class="fbcg_main">
-                        <input type="button" id="btnCKXX" class="btn btn-info fbcg_btn" value="查看信息"/>
-                        <input type="button" id="btnGLXX" class="btn btn-info fbcg_btn" value="管理信息"/>
-                        <input type="button" id="btnZDXX" class="btn btn-info fbcg_btn" value="置顶信息"/>
-                        <input type="button" id="btnZFXX" class="btn btn-info fbcg_btn" value="再发一条"/>
+                        <a class="btn btn-info fbcg_btn" id="btnCKXX"><span>查看信息</span></a>
+                        <a class="btn btn-info fbcg_btn" id="btnGLXX"><span>管理信息</span></a>
+                        <a class="btn btn-info fbcg_btn" id="btnZDXX"><span>置顶信息</span></a>
+                        <a class="btn btn-info fbcg_btn" id="btnZFXX"><span>再发一条</span></a>
                     </div>
                     <div class="fbcg_tg">使用在线推广，快速提升浏览量，助您快速成交！ <a class="fbcg_info_navigation">了解详情</a>
                     </div>
