--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -7,6 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
+    <link href="@Url.Content("~/Areas/Business/Css/ZHMM.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ZHMM.js")"></script>
 </head>
 <body>
@@ -15,17 +16,17 @@
             <tr>
                 <td class="headtd">
                     <div style="width: 432px;">
-                        <div class="divstep" id="divQRZH">
-                            <span class="spanstep" id="spanQRZH">确认账户</span>
-                            <em class="emstep" id="emQRZH"></em>
+                        <div class="zhmm_divstep" id="divQRZH">
+                            <span class="zhmm_spanstep" id="spanQRZH">确认账户</span>
+                            <em class="zhmm_emstep" id="emQRZH"></em>
                         </div>
-                        <div class="divstep" id="divYZZH">
-                            <span class="spanstep" id="spanYZZH">验证账户</span>
-                            <em class="emstep" id="emYZZH"></em>
+                        <div class="zhmm_divstep" id="divYZZH">
+                            <span class="zhmm_spanstep" id="spanYZZH">验证账户</span>
+                            <em class="zhmm_emstep" id="emYZZH"></em>
                         </div>
-                        <div class="divstep" id="divCZMM">
-                            <span class="spanstep" id="spanCZMM">重置密码</span>
-                            <em class="emstep" id="emCZMM"></em>
+                        <div class="zhmm_divstep" id="divCZMM">
+                            <span class="zhmm_spanstep" id="spanCZMM">重置密码</span>
+                            <em class="zhmm_emstep" id="emCZMM"></em>
                         </div>
                     </div>
                 </td>
