--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -43,7 +43,19 @@
     <div class="new_info">
         <ul class="ul_new_info">
             <li class="li_new_info">
-                <div class="div_new_info"></div>
+                <div class="div_new_info">
+                    <div class="div_new_info_head"><span class="div_new_info_head_span">信息号: 30763649889457</span></div>
+                    <div class="div_new_info_body">
+                        <div class="div_new_info_body_left">
+                            <div class="div_new_info_body_left_inner">
+                                <img class="img_new_info_body_left"/>
+                                <span class="span_new_info_body_left_bt">君临天华(B区) 1室0厅1卫</span>
+                                <span class="span_new_info_body_left_rq">2017-07-18 09:23</span>
+                                <span class="span_new_info_body_left_dh">福州 - 房产信息 - 租房</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
