--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -4,26 +4,6 @@
     height: 50px;
 }
 
-.new_info {
-    display: block;
-    width: 100%;
-}
-
-.ul_new_info {
-    padding-left: 0;
-}
-
-.li_new_info {
-    margin-top: 10px;
-}
-
-.div_new_info {
-    display: block;
-    width: 100%;
-    height: 184px;
-    border: 1px solid #ccc;
-}
-
 .divstep {
     width: 130px;
     text-align: center;
@@ -44,4 +24,66 @@
     height: 1px;
     float: left;
     background: #cccccc;
+}
+
+
+.new_info {
+    display: block;
+    width: 100%;
+}
+
+.ul_new_info {
+    padding-left: 0;
+}
+
+.li_new_info {
+    margin-top: 10px;
+}
+
+.div_new_info {
+    display: block;
+    width: 100%;
+    height: 184px;
+    border: 1px solid #f0f0f0;
+}
+
+.div_new_info_head {
+    height: 40px;
+    background-color: #fafafa;
+    padding: 9px 12px;
+}
+
+.div_new_info_head_span {
+    color: #898989;
+    font-size: 12px;
+    height: 24px;
+}
+
+.div_new_info_body {
+    height: 144px;
+}
+
+.div_new_info_body_left {
+    width: 330px;
+    height: 144px;
+    padding: 32px 30px;
+}
+
+.div_new_info_body_left_inner {
+    width: 256px;
+    height: 80px;
+}
+
+.img_new_info_body_left {
+    width: 90px;
+    height: 77px;
+    background-image: url(images/test.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.span_new_info_body_left_bt {
+    color: #313131;
+    font-weight: 700;
 }
