--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -64,6 +64,7 @@
 }
 
 .div_new_info_body_left {
+    float: left;
     width: 330px;
     height: 144px;
     padding: 32px 30px;
@@ -72,6 +73,13 @@
 .div_new_info_body_left_inner {
     width: 256px;
     height: 80px;
+}
+
+.div_new_info_body_left_inner_img {
+    width: 90px;
+    height: 77px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .img_new_info_body_left {
@@ -83,7 +91,63 @@
     background-position: center;
 }
 
+.div_new_info_body_left_inner_info {
+    width: 158px;
+    height: 77px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 4px;
+    padding-top: 5px;
+}
+
 .span_new_info_body_left_bt {
     color: #313131;
     font-weight: 700;
+    font-size: 13px;
+    display: block;
+}
+
+.span_new_info_body_left_rq {
+    color: #898989;
+    font-size: 13px;
+    display: block;
+}
+
+.span_new_info_body_left_dh {
+    font-size: 13px;
+    display: block;
+}
+
+.div_new_info_body_middle {
+    float: left;
+    width: 280px;
+    height: 144px;
+    padding: 32px 30px;
+}
+
+.span_new_info_body_middle {
+    margin-top: 5px;
+    padding-left: 12px;
+    width: 220px;
+    height: 80px;
+    font-size: 12px;
+    display: block;
+    border-left: 1px solid #e6e6e6;
+}
+
+.div_new_info_body_right {
+    float: left;
+    width: 280px;
+    height: 144px;
+    padding: 32px 30px;
+}
+
+.span_new_info_body_right {
+    margin-top: 5px;
+    padding-left: 12px;
+    width: 220px;
+    height: 80px;
+    font-size: 12px;
+    display: block;
+    border-left: 1px solid #e6e6e6;
 }
