--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -42,7 +42,7 @@
     <div id="divSplit" style="width: 100%; height: 30px">
 
     </div>
-    <div id="divContent" style="width: 100%; height: 531px">
+    <div id="divContent" style="width: 100%; height: 931px">
         <div id="divLeftMenu" style="height: 100%; float: left; width: 184px; background-color: #fafafa; margin-left: 170px; text-align: center">
             <ul style="display: block; padding: 20px 0 0 20px">
                 <li class="liLeftMenu">
@@ -57,6 +57,17 @@
                 <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDDG">我的订购</span></li>
                 <li class="liLeftMenu"><span class="spanleftsecond" id="spanKHFW">客户服务</span></li>
                 <li class="liLeftMenu"><span class="spanleftsecond" id="spanBZZX">帮助中心</span></li>
+            </ul>
+            <ul style="display: block; padding: 20px 0 0 20px">
+                <li class="liLeftMenu">
+                    <span class="spanleftfirst" id="spanZHSZ">账户设置</span>
+                    <em class="emstep" style="width: 140px; height: 1px;" id="emQRZH"></em>
+                </li>
+                <li class="liLeftMenu"><span class="spanleftsecond" id="spanGRZL">个人资料</span></li>
+                <li class="liLeftMenu"><span class="spanleftsecond" id="spanZHBD">账号绑定</span></li>
+                <li class="liLeftMenu"><span class="spanleftsecond" id="spanRZGL">认证管理</span></li>
+                <li class="liLeftMenu"><span class="spanleftsecond" id="spanMMSZ">密码设置</span></li>
+                <li class="liLeftMenu"><span class="spanleftsecond" id="spanXXGL">消息管理</span></li>
             </ul>
         </div>
         <div id="divRightContent" style="height: 100%; width: 900px; float: left; margin-left: 10px;">
