--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/YHGL.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/WDFB.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/WDFB.js")"></script>
 </head>
@@ -45,67 +45,13 @@
             <li class="li_new_info">
                 <div class="div_new_info">
                     <div class="div_new_info_head">
-                        <span class="div_new_info_head_span">信息号: 30763649889457</span>
+                        <span class="span_new_info_head">信息号: 30763649889457</span>
                     </div>
                     <div class="div_new_info_body">
                         <div class="div_new_info_body_left">
                             <div class="div_new_info_body_left_inner">
                                 <div class="div_new_info_body_left_inner_img">
                                     <img class="img_new_info_body_left"/>
-                                </div>
-                                <div class="div_new_info_body_left_inner_info">
-                                    <span class="span_new_info_body_left_bt">君临天华(B区) 1室0厅1卫</span>
-                                    <span class="span_new_info_body_left_rq">2017-07-18 09:23</span>
-                                    <span class="span_new_info_body_left_dh">福州 - 房产信息 - 租房</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="div_new_info_body_middle">
-                            <span class="span_new_info_body_middle">个人删除</span>
-                        </div>
-                        <div class="div_new_info_body_right">
-                            <span class="span_new_info_body_right">恢复</span>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="li_new_info">
-                <div class="div_new_info">
-                    <div class="div_new_info_head">
-                        <span class="div_new_info_head_span">信息号: 30763649889457</span>
-                    </div>
-                    <div class="div_new_info_body">
-                        <div class="div_new_info_body_left">
-                            <div class="div_new_info_body_left_inner">
-                                <div class="div_new_info_body_left_inner_img">
-                                    <img class="img_new_info_body_left"/>
-                                </div>
-                                <div class="div_new_info_body_left_inner_info">
-                                    <span class="span_new_info_body_left_bt">君临天华(B区) 1室0厅1卫</span>
-                                    <span class="span_new_info_body_left_rq">2017-07-18 09:23</span>
-                                    <span class="span_new_info_body_left_dh">福州 - 房产信息 - 租房</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="div_new_info_body_middle">
-                            <span class="span_new_info_body_middle">个人删除</span>
-                        </div>
-                        <div class="div_new_info_body_right">
-                            <span class="span_new_info_body_right">恢复</span>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="li_new_info">
-                <div class="div_new_info">
-                    <div class="div_new_info_head">
-                        <span class="div_new_info_head_span">信息号: 30763649889457</span>
-                    </div>
-                    <div class="div_new_info_body">
-                        <div class="div_new_info_body_left">
-                            <div class="div_new_info_body_left_inner">
-                                <div class="div_new_info_body_left_inner_img">
-                                    <img class="img_new_info_body_left" />
                                 </div>
                                 <div class="div_new_info_body_left_inner_info">
                                     <span class="span_new_info_body_left_bt">君临天华(B区) 1室0厅1卫</span>
