--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -1,1 +1,55 @@
-﻿
+﻿.div_top {
+    width: 100%;
+    height: 30px;
+    background-color: #fafafa;
+    vertical-align: middle;
+}
+
+.div_top_right {
+    width: 290px;
+    margin-left: 71.3%;
+    text-align: center;
+    height: 25px;
+    padding-top: 5px;
+}
+
+.a_top_right_sy {
+    text-decoration: none;
+    color: #666;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.img_top_right_split {
+    width: 1px;
+    height: 12px;
+    background: #cccccc;
+    margin: -3px 5px 0 5px;
+}
+
+.a_top_right_sjdl {
+    text-decoration: none;
+    color: #666;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.no_line:hover {
+    text-decoration: none;
+    color:#5bc0de;
+}
+
+.img_top_right_sjdl {
+    background-image: url(images/cellphone.png);
+    background-size: 100%;
+    width: 12px;
+    height: 21px;
+    margin: -3px 5px 0 5px;
+}
+
+.a_top_right_yhm {
+    text-decoration: none;
+    color: #666;
+    font-size: 12px;
+    cursor: pointer;
+}
