--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
@@ -65,13 +65,13 @@
 
 .div_new_info_body_left {
     float: left;
-    width: 330px;
+    width: 370px;
     height: 144px;
     padding: 32px 30px;
 }
 
 .div_new_info_body_left_inner {
-    width: 256px;
+    width: 310px;
     height: 80px;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .div_new_info_body_left_inner_info {
-    width: 158px;
+    width: 210px;
     height: 77px;
     display: inline-block;
     vertical-align: middle;
@@ -120,34 +120,43 @@
 
 .div_new_info_body_middle {
     float: left;
-    width: 280px;
-    height: 144px;
-    padding: 32px 30px;
+    width: 250px;
+    height: 80px;
+    margin-top: 31px;
+    border-left: 1px solid #e6e6e6;
 }
 
 .span_new_info_body_middle {
     margin-top: 5px;
-    padding-left: 12px;
-    width: 220px;
-    height: 80px;
+    margin-left: 12px;
+    width: 52px;
+    height: 17px;
     font-size: 12px;
     display: block;
-    border-left: 1px solid #e6e6e6;
+    
 }
 
 .div_new_info_body_right {
     float: left;
-    width: 280px;
-    height: 144px;
-    padding: 32px 30px;
+    width: 250px;
+    height: 80px;
+    margin-top: 31px;
+    border-left: 1px solid #e6e6e6;
 }
 
 .span_new_info_body_right {
     margin-top: 5px;
-    padding-left: 12px;
-    width: 220px;
-    height: 80px;
+    margin-left: 12px;
+    width: 52px;
+    height: 17px;
     font-size: 12px;
     display: block;
-    border-left: 1px solid #e6e6e6;
+}
+
+.active {
+    cursor: pointer;
+}
+
+.active:hover {
+    color: #5bc0de;
 }
