最新发布信息

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -15,9 +15,9 @@
 </head>
 <body>
     <div class="wdfb_right_head">
-        <div class="divstep" id="divZXXX">
-            <span class="spanstep" id="spanZXXX">最新信息</span>
-            <em class="emstep" id="emZXXX"></em>
+        <div class="divstep" id="divZJFBXX">
+            <span class="spanstep" id="spanZJFBXX">最近发布信息</span>
+            <em class="emstep" id="emZJFBXX"></em>
         </div>
         <div class="divstep" id="divXSZXX">
             <span class="spanstep" id="spanXSZXX">显示中的信息</span>
