我的发布列表完成

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -23,16 +23,16 @@
             <span class="spanstep" id="spanXSZXX">显示中的信息</span>
             <em class="emstep" id="emXSZXX"></em>
         </div>
-        <div class="divstep" id="divSHZXX">
-            <span class="spanstep" id="spanSHZXX">审核中的信息</span>
-            <em class="emstep" id="emSHZXX"></em>
+        <div class="divstep" id="divDSHXX">
+            <span class="spanstep" id="spanDSHXX">待审核的信息</span>
+            <em class="emstep" id="emDSHXX"></em>
         </div>
         <div class="divstep" id="divYSCXX">
             <span class="spanstep" id="spanYSCXX">已删除的信息</span>
             <em class="emstep" id="emYSCXX"></em>
         </div>
         <div class="divstep" id="divWXSXX">
-            <span class="spanstep" id="spanWXSXX">未显示信息</span>
+            <span class="spanstep" id="spanWXSXX">未显示的信息</span>
             <em class="emstep" id="emWXSXX"></em>
         </div>
         <div class="divstep">
@@ -41,7 +41,6 @@
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
-        
     </div>
 </body>
 </html>
